# qt_plugin_hifb

./: .gitignore  CMakeLists.txt  README.md  build.sh
demo/: CMakeLists.txt  main.cpp  mainwindow.ui  test_qt.pro
hifb/include/HI3519_V101/: acodec.h  fisheye_calibrate.h  hi_ae_comm.h  hi_awb_comm.h  hi_comm_3a.h  hi_comm_aio.h  hi_comm_fisheye.h  hi_comm_isp.h  hi_comm_rc.h  hi_comm_region.h  hi_comm_sns.h  hi_comm_vi.h  hi_comm_video.h  hi_comm_vo.h  hi_comm_vpss.h  hi_defines.h  hi_isp_bin.h  hi_ive.h  hi_math.h  hi_sns_ctrl.h  hi_tde_type.h  hi_unf_cipher.h  hi_vreg.h  hifb.h  histitch.h  mpi_ai.h  mpi_awb.h  mpi_isp.h  mpi_ive.h  mpi_sys.h  mpi_vi.h  mpi_vpss.h  watchdog.h
hifb/include/hifb/: hifb.h
hifb/src/: CMakeLists.txt  hifb.c
hifb/src/common/: sample_comm.h  sample_comm_sys.c  sample_comm_vo.c
mpp/HI3519_V101/include/: acodec.h  fisheye_calibrate.h  hi_ae_comm.h  hi_comm_isp.h  hi_comm_sys.h  hi_comm_venc.h  hi_comm_vi.h  mod_ext.h  mpi_isp.h  mpi_venc.h  mpi_vi.h
qt5/: .gitignore  CMakeLists.txt  build.sh  build_hisiv500.sh  download.sh
qt5/linuxfb/: qlinuxfbscreen.cpp
qt5/patches-qt-5.11.2/: ExecutableAllocator.h  patch.sh  qhash.cpp
qt5/patches-qt-5.11.2/linux-arm-hisiv500-uclibcgnueabi-g++/: qmake.conf
qt5/patches-qt-5.11.2/linuxfb/: linuxfb.pro  qlinuxfbscreen.cpp  qlinuxfbscreen.h
test/: CMakeLists.txt  build_test_fb.sh  test_fb.cpp  test_hifb.cpp
